--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <input id="input" type="text" value="Username">
         <button id="connect">Connect</button>
     </div>
+    <button id="start">Start</button>
     <canvas id="canvas"></canvas>
 </body>
 </html>
