Update UNO and add comments

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <input id="input" type="text" value="Username">
         <button id="connect">Connect</button>
     </div>
+    <h2 id="disconnect">You have been disconnected!</h2>
     <button id="start">Start</button>
     <canvas id="canvas"></canvas>
 </body>
