Update frontend GUI & UNO

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="playerInfo">
+    <div id="players"></div>
+    <div id="playerinfo">
         <input id="input" type="text" value="Username">
         <button id="connect">Connect</button>
     </div>
     <h2 id="disconnect">You have been disconnected!</h2>
     <button id="start">Start</button>
-    <canvas id="canvas"></canvas>
 </body>
 </html>
