Add UNO cards client side

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,16 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="players"></div>
+    <div id="game">
+        <div id="players"></div>
+        <div id="self">
+            <div class="cards">
+                <h1>TOP CARD</h1>
+                <div id="card"></div>
+            </div>
+            <div id="hand"></div>
+        </div>
+    </div>
     <div id="playerinfo">
         <input id="input" type="text" value="Username">
         <button id="connect">Connect</button>
