Add players' hand cards

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,19 @@
     <div id="game">
         <div id="players"></div>
         <div id="self">
-            <div class="cards">
+            <div id="topcard">
                 <h1>TOP CARD</h1>
                 <div id="card"></div>
             </div>
-            <div id="hand"></div>
+            <div id="hand">
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+            </div>
         </div>
     </div>
     <div id="playerinfo">
