--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,8 @@
                 <div id="card"></div>
             </div>
             <div id="hand">
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
+                <div id="cards-row">
+                </div>
             </div>
         </div>
     </div>
