Make the cards playable, improve interface

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
                 <div id="card"></div>
             </div>
             <div id="hand">
-                <div id="cards-row">
+                <div id="cards-row"></div>
+                <div id="buttons">
+                    <button id="draw">DRAW</button>
                 </div>
             </div>
         </div>
